--- a/google_play_music_flutter_clone/pubspec.yaml
+++ b/google_play_music_flutter_clone/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flute_music_player: ^0.0.6
+  path: ^1.6.4
+  path_provider: ^1.6.4
+  sqflite: ^1.2.0
 
 
 # For information on the generic Dart part of this file, see the
