--- a/google_play_music_flutter_clone/pubspec.yaml
+++ b/google_play_music_flutter_clone/pubspec.yaml
@@ -19,6 +19,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flute_music_player: ^0.0.6
+  path: ^1.6.4
+  path_provider: ^1.6.4
+  sqflite: ^1.2.0
+  equatable: ^1.1.1
+  flutter_bloc: ^3.2.0
+  dartz: ^0.8.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -27,10 +34,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flute_music_player: ^0.0.6
-  path: ^1.6.4
-  path_provider: ^1.6.4
-  sqflite: ^1.2.0
+  mockito: ^4.1.1
 
 
 # For information on the generic Dart part of this file, see the
