--- a/google_play_music_flutter_clone/pubspec.yaml
+++ b/google_play_music_flutter_clone/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   equatable: ^1.1.1
   flutter_bloc: ^3.2.0
   dartz: ^0.8.9
+  rxdart: ^0.23.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
