--- a/google_play_music_flutter_clone/pubspec.yaml
+++ b/google_play_music_flutter_clone/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_bloc: ^3.2.0
   dartz: ^0.8.9
   sliding_up_panel: ^1.0.0
+  flute_music_player: ^0.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -50,8 +51,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  #   - images/MINIMIECHINCHINPROMO1.jpg
+   
+   
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
