implemented SplashScreenBloc -- still some little issues to fix

--- a/google_play_music_flutter_clone/pubspec.yaml
+++ b/google_play_music_flutter_clone/pubspec.yaml
@@ -43,6 +43,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - images/kindpng_757028.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -50,8 +52,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/MINIMIECHINCHINPROMO1.jpg
+  
    
    
 
